<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:float="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp">

            <ImageView
                app:srcCompat="@drawable/logo"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                float:ignore="VectorDrawableCompat" />
            <TextView
                android:text="Welcome!!\nLet's Get You In !!"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"
                android:minLines="2"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/username_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_hasFocus="true"
                app:mtf_image="@drawable/ic_user"
                app:mtf_labelColor="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="Tell us your email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary"
                    float:ignore="HardcodedText,UnusedAttribute"
                    float:inputType="textPassword|textVisiblePassword" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                app:mtf_hasFocus="true"
                app:mtf_image="@drawable/ic_key">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="The super duper secret"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    float:ignore="HardcodedText,UnusedAttribute"
                    float:inputType="textPassword|textVisiblePassword" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:layout_marginEnd="8dp" />


            </RelativeLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Login"
                float:ignore="HardcodedText,UnusedAttribute" />

            <Button
                android:id="@+id/registerHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:background="@drawable/button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Register"
                float:ignore="HardcodedText,UnusedAttribute" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>